2001-10-22  Mark McLoughlin  <mark@skynet.ie>

	* main.c: (main): activate old panel object as well for the
	moment.

	* GNOME_Panel.server.in: kill PanelShell_Factory - there's no
	factory. Add GNOME_Panel.

	* extern.c: (extern_init): clean up. 

2001-10-19  jacob berkman  <jacob@ximian.com>

	* various: s/gnome-panel.h/GNOME_Panel.h/
	
	* GNOME_Panel.server.in: real .server file

	* panel-shell.[ch]: global corba object - will be used by applets
	to find the panel.  this might not get used - making GNOME_Panel a
	BonoboObject could do the trick as well, but i didn't want to
	touch that yet.

	* main.c (main): create a shell object and register with
	bonobo-activation. if there is already a panel or we couldn't
	register, abort.

2001-10-19  Mark McLoughlin  <mark@skynet.ie>

	* extern.c, extern.h: 
	(extern_load_applet): renamed from load_extern_applet.
	(extern_load_queued): renamed from load_queued_externs.
	(extern_init): renamed from panel_corba_gtk_init.
	(extern_start_new_goad_id), (reload_applet_callback),
	(extern_clean), (send_position_change),
	(panel_corba_clean_up), (s_panel_add_applet_full),
	(s_panel_add_status), (send_draw):
	(extern_activate_panelspot): cleaned up.

	* main.c: (main): 
	* menu.c: (add_applet):
	* panel.c: (drag_data_recieved_cb):
	* session.c: (try_evil_config_hacks), (init_user_applets):
	* status.c: (status_spot_remove): update.

2001-10-19  Glynn Foster  <glynn.foster@sun.com>

	* basep-widget.c, gnome-panel-properties.c,
	* panel_config_global.h, session.c: Remove
	'hide_panel_frame' which now defaults to FALSE. So whether
	buttons are flush with the panel depends on background type
	only. Another useless property best removed :)

2001-10-19  Mark McLoughlin  <mark@skynet.ie>

	* menu.c: (create_menu_at_fr), (create_desktop_menu),
	(create_root_menu): fix some silly bugs of mine.

2001-10-19  Mark McLoughlin  <mark@skynet.ie>

	* menu.c: (create_root_menu): fix dumb bug.

	* menu-properties.c: (create_properties_dialog):